--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "EmployeeDB.src.com.employee.Main",
-            "projectName": "Software_Development_Project",
+            "vmArgs": "--module-path lib --add-modules javafx.controls,javafx.fxml",
             "cwd": "${Project_PartB_GUI}",
             "console": "integratedTerminal"
         }
