--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "."
     ],
     "java.project.referencedLibraries": [
-        "c:\\Users\\chara\\Downloads\\openjfx-23.0.1_windows-x64_bin-sdk/**/*.jar"
-    ]
+        "lib/*.jar"
+    ],
+    "java.debug.settings.vmArgs": "--module-path lib --add-modules javafx.controls,javafx.fxml"
 }
